# finops-cost-capitalization-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: ci.yml
conf/: accounting_policy.yml  generator_profiles.yml  pipeline.yml
data/contracts/: gold_ml_handoff.yml  raw_cloud_cost_usage.yml
data/sample/: README.md  cloud_cost_usage_sample.csv  cloud_cost_usage_sample_manifest.json
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/seeds/: accounting_policy_defaults.csv  schema.yml
dbt/tests/: bronze_manifest_row_count_matches.sql  gold_capex_candidate_alignment.sql  marts_monthly_summary_reconciles.sql
docs/: accounting_policy.md  architecture.md  contributing.md  ml_handoff.md
docs/assistant/: code_style.md  project_context.md  system_prompt.md
docs/diagrams/: warehouse_schema.dbml
docs/runbooks/: ci_cd.md  dbt_local_execution.md  incident_response.md  local_execution.md
orchestration/dagster_project/: __init__.py  definitions.py  jobs.py  ops.py  schedules.py
scripts/: export_gold.py  generate_billing_data.py  run_local_pipeline.py  setup_all.sh  setup_issues.sh  setup_labels.sh  setup_milestones.sh
scripts/github/: common.sh  setup_all.sh  setup_issues.sh  setup_labels.sh  setup_milestones.sh
src/finops_capex/: __init__.py
tests/: conftest.py
tests/integration/: test_dbt_pipeline_e2e.py  test_lake_writer.py
(+45 files in other folders)
